# data-engineering-zoomcamp

./: .gitignore  pyproject.toml
00_homework/homework-module-01/: README.md  ingest_taxi_data.py  pyproject.toml
00_homework/homework-module-02/: gcp_taxi_scheduled-bkfill.yaml
00_homework/homework-module-04/: README.md  stg_fhv_tripdata.sql
00_homework/homework-module-07/: docker-compose.yml
00_homework/homework-module-07/live/: docker-compose.yaml
00_homework/homework-module-07/src/: modelss.py
00_homework/homework-module-dltworkshop/: ReadMe.md
00_homework/homework-module-dltworkshop/taxi-pipeline/: taxi_pipeline.py
02-workflow-orchestration/: docker-compose.yaml  import_commands
03-data-warehouse/: my_bq_queries.sql
04-analytics-engineering/taxi_rides_ny/: .gitignore
06-batch/: MyNotes.md
06-batch/code/: 03_test.ipynb  04_pyspark.ipynb  pyspark_homework.ipynb
06-batch/code/pq/: .part-00000-393c02c2-7557-4cb5-895c-1d5fd83f0016-c000.snappy.parquet.crc  .part-00001-393c02c2-7557-4cb5-895c-1d5fd83f0016-c000.snappy.parquet.crc  (+2 more)
homework-module-01/: README.md  main.tf  variables.tf
homework-module-02/: README.md
homework-module-03/: Readme.md  load_yellow_taxi_data.py
homework-module-04/: web_to_gcs_fhv.py
my-dlt-pipeline/: open_library_pipeline.py
pipeline/: Dockerfile  PostgreSQL_DB_CopyImport.sql  doc_comm_notes  docker-compose.yaml  ingest_data copy.py  notebook.ipynb  pipeline.py  pyproject.toml
terrademo/: main.tf  main.tf_bkup  variables.tf
workshops/dlt/: dlt_Pipeline_Overview.ipynb
(+18 files in other folders)
